# aubo_sdk

./: .gitignore  myown.md
Aubo_sdk_dependents_linux_64_bit/depentents/inc/aubo_sdk/: AuboRobotMetaType.h  communicationmatetype.h  ikfunc.h  robotcommon.pb.h  robotcontrolservices.h  robotmoveservice.h  serviceinterface.h
YOLOv11-ONNXRuntime-Linux-ArmGrasp-hwh-manual/: CMakeLists.txt  algo.cpp  engine.cpp  kinect_camera.cpp  main.cpp  serial.cpp  tcp_comm.cpp
YOLOv11-ONNXRuntime-Linux-ArmGrasp-hwh-manual/include/: algo.h  engine.hpp  kinect_camera.h  serial.h  tcp_comm.h
aubo-i5-ros-ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
aubo-i5-ros-ws/devel/lib/pkgconfig/: aubo_description.pc
aubo-i5-ros-ws/devel/share/aubo_description/cmake/: aubo_descriptionConfig.cmake
aubo-i5-ros-ws/src/aubo_description/config/: config.rviz
aubo-i5-ros-ws/src/aubo_description/launch/: display_full.launch
aubo-i5-ros-ws/src/aubo_description/meshes/AGV/: base.STL  link2.STL  link3.STL
aubo-i5-ros-ws/src/aubo_description/meshes/mobile/: mobile_whell.SLDPRT
aubo-i5-ros-ws/src/aubo_description/urdf/: AGV.urdf  aubo_i5_gripper.urdf  aubo_i5_gripper_camera.urdf  aubo_i5_gripper_camera.urdf.xacro  azure_kinect.urdf.xacro
data_generation/: CMakeLists.txt  README.md  get_fruit_centroid.cpp  kinect_camera.cpp  main.cpp  save_fruit_coords.cpp
data_generation/build_fruit_centroid/: CMakeCache.txt  Makefile  cmake_install.cmake  depth2obj  get_fruit_centroid
data_generation/include/: kinect_camera.h
python_test/: get_data.py  get_init.py  libpyauboi5.so.1  libpyauboi5.so.1.5  move_to_position.py  test_1.py
